--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "express-static-gzip": "2.2.0",
     "fs-extra": "11.2.0",
     "idb-keyval": "^6.2.1",
+    "isomorphic-git": "^1.29.0",
     "js-yaml": "^4.1.0",
     "jwt-simple": "^0.5.6",
     "less": "^3.13.1",
