--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "cors": "^2.8.5",
     "create-react-class": "^15.7.0",
     "dedent-tabs": "^0.10.3",
+    "diff": "^8.0.1",
     "expr-eval": "^2.0.2",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
@@ -117,6 +118,7 @@
     "marked-smartypants-lite": "^1.0.3",
     "marked-subsuper-text": "^1.0.3",
     "markedLegacy": "npm:marked@^0.3.19",
+    "md5": "^2.3.0",
     "moment": "^2.30.1",
     "mongoose": "^8.15.0",
     "nanoid": "5.1.5",
