--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "marked-definition-lists": "^1.0.1",
     "marked-emoji": "^2.0.2",
     "marked-extended-tables": "^2.0.1",
+    "marked-extended-variables": "file:../marked-extended-variables",
     "marked-gfm-heading-id": "^4.1.3",
     "marked-nonbreaking-spaces": "^1.0.1",
     "marked-smartypants-lite": "^1.0.3",
