--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
       "server"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(nanoid|@exodus/bytes|parse5)/)"
+      "node_modules/(?!(nanoid|@exodus/bytes|parse5|markdown)/)"
     ],
     "transform": {
       "^.+\\.js$": "babel-jest"
@@ -116,16 +116,18 @@
     "jwt-simple": "^0.5.6",
     "less": "^3.13.1",
     "lodash": "^4.17.21",
-    "marked": "15.0.12",
-    "marked-alignment-paragraphs": "^1.0.0",
-    "marked-definition-lists": "^1.0.1",
+    "marked": ">=16.2",
+    "marked-alignment-paragraphs": "file:../marked-aligned-paragraphs",
+    "marked-definition-lists": "file:../marked-definition-lists",
     "marked-emoji": "^2.0.2",
-    "marked-extended-tables": "^2.0.1",
-    "marked-gfm-heading-id": "^4.1.3",
-    "marked-nonbreaking-spaces": "^1.0.1",
-    "marked-smartypants-lite": "^1.0.3",
-    "marked-subsuper-text": "^1.0.4",
-    "marked-variables": "^1.0.4",
+    "marked-extended-tables": "file:../marked-extended-tables",
+    "marked-gfm-heading-id": "file:../marked-gfm-heading-id",
+    "marked-line-numbers": "file:../marked-linenumbers",
+    "marked-nonbreaking-spaces": "file:../marked-nonbreaking-spaces",
+    "marked-smartypants-lite": "file:../marked-smartypants-lite",
+    "marked-subsuper-text": "file:../marked-subsuper-text",
+    "marked-token-position": "^2.0.0",
+    "marked-variables": "file:../marked-variables",
     "markedLegacy": "npm:marked@^0.3.19",
     "moment": "^2.30.1",
     "mongoose": "^8.20.0",
